edited jupyter code

--- a/Pyber Analysis.ipynb
+++ b/Pyber Analysis.ipynb
@@ -4,23 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis"
+    "# Pyber Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The scatter plot indicates a correlation between driver count and number of rides per city. Both categories are highest in urban areas.\n",
+    "## Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The scatter plot indicates a correlation between driver count and number of rides per city. Both categories are highest in urban areas.\n",
     "\n",
-    "## Drivers are significantly higher represented in urban areas, yet the average fare per driver is higher in rural areas. Drivers may make higher earning by working in rural areas.\n",
+    "### Drivers are significantly higher represented in urban areas, yet the average fare per driver is higher in rural areas. Drivers may make higher earning by working in rural areas.\n",
     "\n",
-    "## Suburban areas represent a moderate portion of total fares, total drivers, and total rides."
+    "### Suburban areas represent a moderate portion of total fares, total drivers, and total rides."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -56,62 +63,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Richardfort</td>\n",
-       "      <td>38</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2018-02-24 08:40:38</td>\n",
+       "      <td>2/24/2018 8:40</td>\n",
        "      <td>13.93</td>\n",
-       "      <td>5628545007794</td>\n",
+       "      <td>5.630000e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Richardfort</td>\n",
-       "      <td>38</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2018-02-13 12:46:07</td>\n",
+       "      <td>2/13/2018 12:46</td>\n",
        "      <td>14.00</td>\n",
-       "      <td>910050116494</td>\n",
+       "      <td>9.100000e+11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Richardfort</td>\n",
-       "      <td>38</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2018-02-16 13:52:19</td>\n",
+       "      <td>2/16/2018 13:52</td>\n",
        "      <td>17.92</td>\n",
-       "      <td>820639054416</td>\n",
+       "      <td>8.210000e+11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Richardfort</td>\n",
-       "      <td>38</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2018-02-01 20:18:28</td>\n",
+       "      <td>2/1/2018 20:18</td>\n",
        "      <td>10.26</td>\n",
-       "      <td>9554935945413</td>\n",
+       "      <td>9.550000e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Richardfort</td>\n",
-       "      <td>38</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2018-04-17 02:26:37</td>\n",
+       "      <td>4/17/2018 2:26</td>\n",
        "      <td>23.00</td>\n",
-       "      <td>720020655850</td>\n",
+       "      <td>7.200000e+11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          city  driver_count   type                 date   fare        ride_id\n",
-       "0  Richardfort            38  Urban  2018-02-24 08:40:38  13.93  5628545007794\n",
-       "1  Richardfort            38  Urban  2018-02-13 12:46:07  14.00   910050116494\n",
-       "2  Richardfort            38  Urban  2018-02-16 13:52:19  17.92   820639054416\n",
-       "3  Richardfort            38  Urban  2018-02-01 20:18:28  10.26  9554935945413\n",
-       "4  Richardfort            38  Urban  2018-04-17 02:26:37  23.00   720020655850"
+       "          city  driver_count   type             date   fare       ride_id\n",
+       "0  Richardfort          38.0  Urban   2/24/2018 8:40  13.93  5.630000e+12\n",
+       "1  Richardfort          38.0  Urban  2/13/2018 12:46  14.00  9.100000e+11\n",
+       "2  Richardfort          38.0  Urban  2/16/2018 13:52  17.92  8.210000e+11\n",
+       "3  Richardfort          38.0  Urban   2/1/2018 20:18  10.26  9.550000e+12\n",
+       "4  Richardfort          38.0  Urban   4/17/2018 2:26  23.00  7.200000e+11"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +131,8 @@
     "import numpy as np\n",
     "\n",
     "# File to Load (Remember to change these)\n",
-    "city_data_to_load = \"./city_data.csv\"\n",
-    "ride_data_to_load = \"./ride_data.csv\"\n",
+    "city_data_to_load = \"./data/city_data.csv\"\n",
+    "ride_data_to_load = \"./data/ride_data.csv\"\n",
     "\n",
     "# Read the City and Ride Data\n",
     "cityfile = pd.read_csv(city_data_to_load)\n",
@@ -140,9 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Urban', 'Suburban', 'Rural'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "urban = file[file[\"type\"] == \"Urban\"]\n",
     "suburban = file[file[\"type\"] == \"Suburban\"]\n",
@@ -160,18 +178,20 @@
     "rurcitytotals = rural.groupby([\"city\"]).sum()\n",
     "rurcitycounts = rural.groupby([\"city\"]).count()\n",
     "\n",
-    "citytypes = file[\"type\"].unique()\n"
+    "citytypes = file[\"type\"].unique()\n",
+    "citytypes = citytypes[[0, 1, 2]]\n",
+    "citytypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "file.to_csv(\"./pyber_data.csv\")"
+    "file.to_csv(\"./data/pyber_data.csv\")"
    ]
   },
   {
@@ -183,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +250,7 @@
     "plt.text(42, 30, \"Note:\\n Circle size correlates with driver count per city.\")\n",
     "\n",
     "# Save Figure\n",
-    "plt.savefig(\"./pyberbubble.png\")"
+    "plt.savefig(\"./images/pyberbubble.png\")"
    ]
   },
   {
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +296,7 @@
     "plt.axis = \"equal\"\n",
     "plt.title(\"% of Total Fares by City Type\")\n",
     "# Save Figure\n",
-    "plt.savefig(\"./pyberfares.png\")"
+    "plt.savefig(\"./images/pyberfares.png\")"
    ]
   },
   {
@@ -288,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +343,7 @@
     "plt.title(\"% of Total Rides by City Type\")\n",
     "\n",
     "# Save Figure\n",
-    "plt.savefig(\"./pyberrides.png\")"
+    "plt.savefig(\"./images/pyberrides.png\")"
    ]
   },
   {
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -370,12 +390,12 @@
     "plt.title(\"% of Total Drivers by City Type\")\n",
     "\n",
     "# Save Figure\n",
-    "plt.savefig(\"./pyberdrivers.png\")"
+    "plt.savefig(\"./images/pyberdrivers.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +418,7 @@
        "Text(0,0.5,'Fares Per Driver ($)')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -426,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -444,6 +464,13 @@
     "print(f\"The average fare per driver in suburban areas is ${subfpd:.2f}.\")\n",
     "print(f\"The average fare per driver in rural areas is ${rurfpd:.2f}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
